core/graph.h

struct Graph {
   struct hashtable* vertices;
};
struct Vertex {
   int degree_out;
   int degree_in;
   ListNode* outgoing;
   ListNode* incoming;
   char* label;
    
   int deleted_neighbors;
} ;
//GRAPH FUNCTIONS

Graph*
gNew(void);
void
gDestroyBasic( Graph* self, int free_edge_payloads );
void
gDestroy( Graph* self );
Vertex*
gAddVertex( Graph* self, char *label );