java/src/main/java/org/graphserver/jna/GraphserverLibrary.java


	/**
	 * <i>native declaration : /Users/kolohe/dev/graphserver/core/graphserver.h</i><br>
	 * enum values
	 */
	public static interface edgepayload_t {
		/// <i>native declaration : /Users/kolohe/dev/graphserver/core/graphserver.h:56</i>
		public static final int PL_STREET = 0;
		/// <i>native declaration : /Users/kolohe/dev/graphserver/core/graphserver.h:57</i>
		public static final int PL_TRIPHOPSCHED_DEPRIC = 1;
		/// <i>native declaration : /Users/kolohe/dev/graphserver/core/graphserver.h:58</i>
		public static final int PL_TRIPHOP_DEPRIC = 2;
		/// <i>native declaration : /Users/kolohe/dev/graphserver/core/graphserver.h:59</i>
		public static final int PL_LINK = 3;
		/// <i>native declaration : /Users/kolohe/dev/graphserver/core/graphserver.h:60</i>
		public static final int PL_EXTERNVALUE = 4;
		/**
		 * 5<br>
		 * <i>native declaration : /Users/kolohe/dev/graphserver/core/graphserver.h:61</i>
		 */
		public static final int PL_NONE = 5;
		/// <i>native declaration : /Users/kolohe/dev/graphserver/core/graphserver.h:62</i>
		public static final int PL_WAIT = 6;
		/// <i>native declaration : /Users/kolohe/dev/graphserver/core/graphserver.h:63</i>
		public static final int PL_HEADWAY = 7;
		/// <i>native declaration : /Users/kolohe/dev/graphserver/core/graphserver.h:64</i>
		public static final int PL_TRIPBOARD = 8;
		/// <i>native declaration : /Users/kolohe/dev/graphserver/core/graphserver.h:65</i>
		public static final int PL_CROSSING = 9;
		/**
		 * 10<br>
		 * <i>native declaration : /Users/kolohe/dev/graphserver/core/graphserver.h:66</i>
		 */
		public static final int PL_ALIGHT = 10;
		/// <i>native declaration : /Users/kolohe/dev/graphserver/core/graphserver.h:67</i>
		public static final int PL_HEADWAYBOARD = 11;
		/// <i>native declaration : /Users/kolohe/dev/graphserver/core/graphserver.h:68</i>
		public static final int PL_EGRESS = 12;
		/// <i>native declaration : /Users/kolohe/dev/graphserver/core/graphserver.h:69</i>
		public static final int PL_HEADWAYALIGHT = 13;
		/// <i>native declaration : /Users/kolohe/dev/graphserver/core/graphserver.h:70</i>
		public static final int PL_ELAPSE_TIME = 14;
		/// <i>native declaration : /Users/kolohe/dev/graphserver/core/graphserver.h:71</i>
		public static final int PL_COMBINATION = 15;
	};
	/// <i>native declaration : /Users/kolohe/dev/graphserver/core/graphserver.h</i>
	public static final int SECS_IN_DAY = 86400;
	/// <i>native declaration : /Users/kolohe/dev/graphserver/core/graphserver.h</i>
	public static final int MAX_LONG = 2147483647;
	/// <i>native declaration : /Users/kolohe/dev/graphserver/core/edgetypes/tripboard.h</i>
	public static final int NO_OVERAGE_VALUE = -1;
	/// <i>native declaration : /Users/kolohe/dev/graphserver/core/graphserver.h</i>
	public static final int FALSE = 0;
	/// <i>native declaration : /Users/kolohe/dev/graphserver/core/graphserver.h</i>
	public static final int ABSOLUTE_MAX_WALK = 1000000;
	/// <i>native declaration : /Users/kolohe/dev/graphserver/core/graphserver.h</i>
	public static final int TRUE = 1;
	/// <i>native declaration : /Users/kolohe/dev/graphserver/core/graphserver.h</i>
	public static final int INFINITY = GraphserverLibrary.MAX_LONG;
	/// <i>native declaration : /Users/kolohe/dev/graphserver/core/contraction.h</i>
	public interface signal_callback extends Callback {
		void invoke(int int1);
	};
	/**
	 * Original signature : <code>CHPath* chpNew(int, long)</code><br>
	 * <i>native declaration : /Users/kolohe/dev/graphserver/core/contraction.h:15</i>
	 */
	org.graphserver.jna.CHPath chpNew(int n, NativeLong length);
	/**
	 * Original signature : <code>int chpLength(CHPath*)</code><br>
	 * <i>native declaration : /Users/kolohe/dev/graphserver/core/contraction.h:17</i>
	 */
	int chpLength(org.graphserver.jna.CHPath this_);
	/**
	 * Original signature : <code>CHPath* chpCombine(CHPath*, CHPath*)</code><br>
	 * <i>native declaration : /Users/kolohe/dev/graphserver/core/contraction.h:19</i>
	 */
	org.graphserver.jna.CHPath chpCombine(org.graphserver.jna.CHPath a, org.graphserver.jna.CHPath b);
	/**
	 * Original signature : <code>void chpDestroy(CHPath*)</code><br>
	 * <i>native declaration : /Users/kolohe/dev/graphserver/core/contraction.h:21</i>
	 */
	void chpDestroy(org.graphserver.jna.CHPath this_);
	/**
	 * Original signature : <code>CHPath* dist(Graph*, char*, char*, WalkOptions*, int, int)</code><br>
	 * <i>native declaration : /Users/kolohe/dev/graphserver/core/contraction.h:23</i><br>
	 * @deprecated use the safer methods {@link #dist(org.graphserver.jna.Graph, java.nio.ByteBuffer, java.nio.ByteBuffer, org.graphserver.jna.GraphserverLibrary.WalkOptions, int, int)} and {@link #dist(org.graphserver.jna.Graph, com.sun.jna.Pointer, com.sun.jna.Pointer, org.graphserver.jna.GraphserverLibrary.WalkOptions, int, int)} instead
	 */
	@java.lang.Deprecated 
	org.graphserver.jna.CHPath dist(org.graphserver.jna.Graph gg, Pointer from_v_label, Pointer to_v_label, GraphserverLibrary.WalkOptions wo, int weightlimit, int return_full_path);
	/**
	 * Original signature : <code>CHPath* dist(Graph*, char*, char*, WalkOptions*, int, int)</code><br>
	 * <i>native declaration : /Users/kolohe/dev/graphserver/core/contraction.h:23</i>
	 */
	org.graphserver.jna.CHPath dist(org.graphserver.jna.Graph gg, ByteBuffer from_v_label, ByteBuffer to_v_label, GraphserverLibrary.WalkOptions wo, int weightlimit, int return_full_path);
	/**
	 * Original signature : <code>CHPath** get_shortcuts(Graph*, Vertex*, WalkOptions*, int, int*)</code><br>
	 * <i>native declaration : /Users/kolohe/dev/graphserver/core/contraction.h:25</i><br>
	 * @deprecated use the safer methods {@link #get_shortcuts(org.graphserver.jna.Graph, org.graphserver.jna.Vertex, org.graphserver.jna.GraphserverLibrary.WalkOptions, int, java.nio.IntBuffer)} and {@link #get_shortcuts(org.graphserver.jna.Graph, org.graphserver.jna.Vertex, org.graphserver.jna.GraphserverLibrary.WalkOptions, int, com.sun.jna.ptr.IntByReference)} instead
	 */
	@java.lang.Deprecated 
	PointerByReference get_shortcuts(org.graphserver.jna.Graph gg, org.graphserver.jna.Vertex vv, GraphserverLibrary.WalkOptions wo, int search_limit, IntByReference n);
	/**
	 * Original signature : <code>CHPath** get_shortcuts(Graph*, Vertex*, WalkOptions*, int, int*)</code><br>
	 * <i>native declaration : /Users/kolohe/dev/graphserver/core/contraction.h:25</i>
	 */
	PointerByReference get_shortcuts(org.graphserver.jna.Graph gg, org.graphserver.jna.Vertex vv, GraphserverLibrary.WalkOptions wo, int search_limit, IntBuffer n);
	/**
	 * Original signature : <code>Heap* init_priority_queue(Graph*, WalkOptions*, int)</code><br>
	 * <i>native declaration : /Users/kolohe/dev/graphserver/core/contraction.h:27</i>
	 */
	GraphserverLibrary.Heap init_priority_queue(org.graphserver.jna.Graph gg, GraphserverLibrary.WalkOptions wo, int search_limit);
	/**
	 * Original signature : <code>void pqPush(Heap*, Vertex*, long)</code><br>
	 * <i>native declaration : /Users/kolohe/dev/graphserver/core/contraction.h:29</i>
	 */
	void pqPush(GraphserverLibrary.Heap pq, org.graphserver.jna.Vertex item, NativeLong priority);
	/**
	 * Original signature : <code>Vertex* pqPop(Heap*, long*)</code><br>
	 * <i>native declaration : /Users/kolohe/dev/graphserver/core/contraction.h:31</i>
	 */
	org.graphserver.jna.Vertex pqPop(GraphserverLibrary.Heap pq, NativeLongByReference priority);
	/**
	 * Original signature : <code>CH* get_contraction_hierarchies(Graph*, WalkOptions*, int)</code><br>
	 * <i>native declaration : /Users/kolohe/dev/graphserver/core/contraction.h:33</i>
	 */
	org.graphserver.jna.CH get_contraction_hierarchies(org.graphserver.jna.Graph gg, GraphserverLibrary.WalkOptions wo, int search_limit);
	/**
	 * Original signature : <code>CH* chNew()</code><br>
	 * <i>native declaration : /Users/kolohe/dev/graphserver/core/contraction.h:35</i>
	 */
	org.graphserver.jna.CH chNew();
	/**
	 * Original signature : <code>Graph* chUpGraph(CH*)</code><br>
	 * <i>native declaration : /Users/kolohe/dev/graphserver/core/contraction.h:37</i>
	 */
	org.graphserver.jna.Graph chUpGraph(org.graphserver.jna.CH this_);
	/**
	 * Original signature : <code>Graph* chDownGraph(CH*)</code><br>
	 * <i>native declaration : /Users/kolohe/dev/graphserver/core/contraction.h:39</i>
	 */
	org.graphserver.jna.Graph chDownGraph(org.graphserver.jna.CH this_);
	/**
	 * Original signature : <code>EdgePayload* epNew(edgepayload_t, void*)</code><br>
	 * <i>native declaration : /Users/kolohe/dev/graphserver/core/edgepayload.h:13</i><br>
	 * @param type @see edgepayload_t
	 */
	org.graphserver.jna.EdgePayload epNew(int type, Pointer payload);
	/**
	 * Original signature : <code>void epDestroy(EdgePayload*)</code><br>
	 * <i>native declaration : /Users/kolohe/dev/graphserver/core/edgepayload.h:16</i>
	 */
	void epDestroy(org.graphserver.jna.EdgePayload this_);
	/**
	 * Original signature : <code>edgepayload_t epGetType(EdgePayload*)</code><br>
	 * <i>native declaration : /Users/kolohe/dev/graphserver/core/edgepayload.h:19</i>
	 */
	/**
	 * @see edgepayload_t
	 */int epGetType(org.graphserver.jna.EdgePayload this_);
	/**
	 * Original signature : <code>epGetExternalId(EdgePayload*)</code><br>
	 * <i>native declaration : /Users/kolohe/dev/graphserver/core/edgepayload.h:22</i>
	 */
	int epGetExternalId(org.graphserver.jna.EdgePayload this_);
	/**
	 * Original signature : <code>void epSetExternalId(EdgePayload*, long)</code><br>
	 * <i>native declaration : /Users/kolohe/dev/graphserver/core/edgepayload.h:25</i>
	 */
	void epSetExternalId(org.graphserver.jna.EdgePayload this_, NativeLong external_id);
	/**
	 * Original signature : <code>State* epWalk(EdgePayload*, State*, WalkOptions*)</code><br>
	 * <i>native declaration : /Users/kolohe/dev/graphserver/core/edgepayload.h:28</i>
	 */
	GraphserverLibrary.State epWalk(org.graphserver.jna.EdgePayload this_, GraphserverLibrary.State param, GraphserverLibrary.WalkOptions options);
	/**
	 * Original signature : <code>State* epWalkBack(EdgePayload*, State*, WalkOptions*)</code><br>
	 * <i>native declaration : /Users/kolohe/dev/graphserver/core/edgepayload.h:31</i>
	 */
	GraphserverLibrary.State epWalkBack(org.graphserver.jna.EdgePayload this_, GraphserverLibrary.State param, GraphserverLibrary.WalkOptions options);
	/**
	 * Original signature : <code>Graph* gNew()</code><br>
	 * <i>native declaration : /Users/kolohe/dev/graphserver/core/graph.h:53</i>
	 */
	org.graphserver.jna.Graph gNew();
	/**
	 * Original signature : <code>void gDestroyBasic(Graph*, int)</code><br>
	 * <i>native declaration : /Users/kolohe/dev/graphserver/core/graph.h:56</i>
	 */
	void gDestroyBasic(org.graphserver.jna.Graph this_, int free_edge_payloads);
	/**
	 * Original signature : <code>void gDestroy(Graph*)</code><br>
	 * <i>native declaration : /Users/kolohe/dev/graphserver/core/graph.h:59</i>
	 */
	void gDestroy(org.graphserver.jna.Graph this_);
	/**
	 * Original signature : <code>Vertex* gAddVertex(Graph*, const char*)</code><br>
	 * <i>native declaration : /Users/kolohe/dev/graphserver/core/graph.h:62</i><br>
	 * @deprecated use the safer methods {@link #gAddVertex(org.graphserver.jna.Graph, java.lang.String)} and {@link #gAddVertex(org.graphserver.jna.Graph, com.sun.jna.Pointer)} instead
	 */
	@java.lang.Deprecated 
	org.graphserver.jna.Vertex gAddVertex(org.graphserver.jna.Graph this_, Pointer label);
	/**
	 * Original signature : <code>Vertex* gAddVertex(Graph*, const char*)</code><br>
	 * <i>native declaration : /Users/kolohe/dev/graphserver/core/graph.h:62</i>
	 */
	org.graphserver.jna.Vertex gAddVertex(org.graphserver.jna.Graph this_, java.lang.String label);
